Freedom Sanbox Ant Deploy/src/objects/User.object
<CustomObject>
    <fields>
        <fullName>From_Portal__c</fullName>
        <label>From Portal</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsSynched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSynched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsUnsubscribe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsUnsubscribe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organization_Joining_Date__c</fullName>
        <label>Organization Joining Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Id__c</fullName>
        <label>Portal Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Parent_Entity__c</fullName>
        <label>Portal Parent Entity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Synched_Date_Time__c</fullName>
        <label>Synched Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Workstations__c</fullName>
        <label>Workstations</label>
        <picklist>
            <picklistValues>
                <fullName>Galaxy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amethyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pinnacle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maegan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <listViews>
        <fullName>Customer_Portal_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>PASSWORD_EXPIRES</columns>
        <columns>SU_ACCESS_EXPIRATION</columns>
        <columns>CORE.USERS.EXTENSION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Customer Portal Standard - Custom</value>
        </filters>
        <label>Customer Portal Users</label>
    </listViews>
    <namedFilters>
        <fullName>Account_00NW0000000PFe7MAG</fullName>
        <active>true</active>
        <errorMessage>Please do not select PP  or CP User</errorMessage>
        <field>Account.Channel_Manager__c</field>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Account_Channel Manager</name>
    </namedFilters>
    <namedFilters>
        <fullName>Account_00NW0000000iMwZMAU</fullName>
        <active>true</active>
        <field>Account.Research_Team__c</field>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>RESEARCH</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Account_Research Team</name>
    </namedFilters>
    <namedFilters>
        <fullName>Case_00NW0000000PY85MAG</fullName>
        <active>true</active>
        <errorMessage>User should be Salesforce user</errorMessage>
        <field>Case.AsssignedTo__c</field>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Case_AsssignedTo</name>
    </namedFilters>
</CustomObject>